objects/ApexActivitiesStatsLog__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalStats__c</fullName>
        <label>AdditionalStats</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <description>Method Name</description>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>Object Name</description>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueryBatchJob__c</fullName>
        <description>Query Batch Job</description>
        <label>QueryBatchJob</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>Instead of sending emails for success\failure for background activities, we will populate the information in this object.</description>
    <label>Apex Activities Stats Log</label>
    <nameField>
        <label>ApexActivitiesStatsLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApexActivitiesStatsLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>